<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wang.myapplication.UI.Animation.AnimationDirectoryAcitivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/animation_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_padding_10"
        style="@style/Button.Red"
        android:text="@string/animation_btn_text"/>

    <Button
        android:id="@+id/arcs_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_padding_10"
        style="@style/Button.Red"
        android:text="@string/arcs_btn_text"/>

    <Button
        android:id="@+id/animation_group_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_padding_10"
        style="@style/Button.Red"
        android:text="@string/title_activity_animation_group"/>

    <Button
        android:id="@+id/canvas_animation_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margin_padding_10"
        style="@style/Button.Red"
        android:text="@string/property_animation_btn_text"/>

</LinearLayout>
