<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <com.example.wang.myapplication.UI.Animation.Cirlce.MyCircleAnimationView
            android:id="@+id/circle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/circle_text"
            android:layout_width="@dimen/margin_padding_90"
            android:layout_height="@dimen/margin_padding_90"
            android:layout_centerInParent="true"
            android:background="@drawable/text_circle"/>
        <TextView
            android:id="@+id/animation_text"
            android:layout_width="@dimen/margin_padding_80"
            android:layout_height="@dimen/margin_padding_80"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/list_view_item_cost_bg"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_white"
            android:text="@string/title_activity_animation"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <Button
            android:id="@+id/scale_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:layout_marginRight="@dimen/margin_padding_15"
            style="@style/Button.Red"
            android:text="@string/scale_btn_text"/>
        <Button
            android:id="@+id/rotate_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:layout_marginRight="@dimen/margin_padding_15"
            style="@style/Button.Red"
            android:text="@string/rotate_btn_text"/>
        <Button
            android:id="@+id/translate_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:layout_marginRight="@dimen/margin_padding_15"
            style="@style/Button.Red"
            android:text="@string/translate_btn_text"/>
        <Button
            android:id="@+id/alpha_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:layout_marginRight="@dimen/margin_padding_15"
            style="@style/Button.Red"
            android:text="@string/alpha_btn_text"/>
        <Button
            android:id="@+id/circle_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_40"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:layout_marginLeft="@dimen/margin_padding_15"
            android:layout_marginRight="@dimen/margin_padding_15"
            style="@style/Button.Red"
            android:text="@string/circle_btn_text"/>
    </LinearLayout>


</LinearLayout>
